# libarea

./: .dir-locals.el  .gitignore  Area.cpp  Area.h  AreaClipper.cpp  AreaDxf.cpp  AreaOrderer.cpp  AreaOrderer.h  AreaPocket.cpp  Curve.cpp  Curve.h  Package.swift  libarea.mk
Sources/LibArea/: LibArea.swift
Tests/LibAreaTests/: LibAreaTests.swift
Tests/LibAreaTests/Helpers/: MaterialSimulator.swift  SVGWriter.swift
area.xcodeproj/: project.pbxproj
area.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
kurve/: geometry.h
node.js/: CMakeLists.txt  node-area.cpp  node-test.js  package-lock.json  package.json
src/: Area.cpp  Area.h  AreaClipper.cpp  AreaDxf.h  AreaOrderer.cpp  AreaOrderer.h  AreaPocket.cpp  CMakeLists.txt  Curve.cpp  Curve.h  Point.h  area_c.cpp  dxf.cpp  dxf.h
src/include/: area_c.h
src/kurve/: Construction.cpp  Matrix.cpp  geometry.h  kurve.cpp
test/: CMakeLists.txt  GCode.cpp  Writer.h  dxfwriter.cpp  test.cpp  test.mk  visual_ref.cpp
